--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "use-interval": "^1.4.0"
   },
   "devDependencies": {
     "@docker/extension-api-client-types": "^0.2.2"
