--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.4.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "ansi-to-react": "^6.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
