--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./client
     steps:
-      - uses: actions/checkout@v3 # Checks-out your repository
+      - uses: actions/checkout@v3
       - name: Install modules
         run: yarn
       - name: Run tests
