Don't validate the extension on CI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,4 @@ jobs:
       run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
 
     - name: "Push"
-      run: |
-        make install-plugin
-        make extension
+      run: make extension
