Build CLI from feature/docker-desktop branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: release
 on:
-  release:
-    types:
-      - published
+  push:
+    branches:
+      - main
 
 jobs:
   release:
@@ -22,9 +22,5 @@ jobs:
         qemu-version: latest
         buildx-version: latest
 
-    - id: tag
-      name: Get the tag
-      run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
-
-    - name: "Push"
-      run: make push-extension
+    - name: "Build"
+      run: make build-extension
