--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,12 @@ jobs:
         username: '${{ secrets.DOCKER_USER }}'
         password: '${{ secrets.DOCKER_PASS }}'
 
+    - name: Set up docker buildx
+      uses: crazy-max/ghaction-docker-buildx@v3
+      with:
+        qemu-version: latest
+        buildx-version: latest
+
     - id: tag
       name: Get the tag
       run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
